# babao

./: .coveralls.yml  .gitignore  .travis.yml  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  TODO.md  babao.sh  forever-babao.sh  setup.cfg  setup.py
config/: babao.conf
src/: api.py  babao.py  config.py  indicators.py  log.py  resample-data.py  resample.py
src/babao/: __main__.py  api.py  arg.py  babao.py  commands.py  config.py  fileutils.py  graph.py  indicators.py  ledger.py  log.py  parser.py  resample.py  strategy.py
src/babao/api/: api.py  kraken.py
src/babao/data/: graph.py  indicators.py  ledger.py  resample.py
src/babao/inputs/: inputBase.py  inputHelper.py  inputManager.py  krakenBase.py  krakenInputBase.py  ledgerInputBase.py  tradesInputBase.py
src/babao/inputs/fake/: fakeLedgerInput.py
src/babao/inputs/kraken/: krakenInputBase.py  krakenLedgerInput.py  krakenTradesInput.py
src/babao/models/: modelBase.py  modelHelper.py  modelManager.py  rootModel.py
src/babao/strategy/: ledger.py  modelBase.py  modelHelper.py  modelManager.py  strategy.py  trainer.py  transaction.py
src/babao/utils/: date.py  enum.py  file.py  fileutils.py  indicators.py  ledgercli-translator.py  lock.py  log.py  rwlock.py  scale.py  signal.py
tests/: test_config.py  test_graph.py  test_parser.py  test_simple.py
tests/api/: test_api.py  test_kraken.py
tests/data/: test_indicators.py  test_resample.py
tests/strategy/: test_ledger.py  test_strategy.py
tests/utils/: test_file.py  test_fileutils.py  test_log.py  test_rwlock.py
(+17 files in other folders)
