[aliases]
test=pytest

[metadata]
description-file = README.md

[easy_install]
optimize = 2

[flake8]
max-line-length = 80
exclude = tests, build, dist, .git, __pycache__, .eggs
show_source = True
ignore = E722, W503

[pylint]
output-format = colorized
max-line-length = 80
disable=invalid-name,global-statement,invalid-unary-operand-type
notes=FIXME,DEBUG #,TODO
score=no