[aliases]
test=pytest

[metadata]
description-file = README.md

[easy_install]
optimize = 2

[flake8]
# select = C,E,F,W,B,B9
ignore = E722, W503
exclude = tests, build, dist, .git, __pycache__, .eggs
format = pylint
show_source = True
max-line-length = 80
max-complexity = 8

[pylint]
output-format = colorized
max-line-length = 80
disable = global-statement, unused-import, useless-import-alias # invalid-name
notes = FIXME, DEBUG
score = no
function-naming-style = camelCase
method-naming-style = camelCase
module-rgx = ^[_a-z][_a-zA-Z]*$  # TODO
variable-rgx = ^[_a-z]*$
argument-rgx = ^[_a-z]*$
